test/integration/cli-args/sstanc.t/fail/bad-transformed-data-use.stan
data {
  real y;
}
transformed data {
  real z = y;
}
model {
  y ~ normal(0, 1);
}
